# pipeline-360

./: .coverage  .env  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
data/output/: resultado.parquet  resultado.txt
data/processed/: exemplo_proc.csv
data/raw/: exemplo.csv  exemplo.txt
data_test/output/: resultado.csv
src/pipeline_360/: __main__.py  cli.py  config.py  logger.py
src/pipeline_360/etl/: pipeline.py  steps.py
tests/: test_cli.py  test_cli_coverage.py  test_cli_edges.py  test_cli_more.py  test_config_and_parquet.py  test_config_edges.py  test_entrypoint.py  test_etl.py  test_logger.py  test_logger_edges.py  test_steps_edges.py
