[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-360"
version = "0.1.0"
description = "Pipeline 360"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pydantic>=2", "pandas>=2", "python-dotenv>=1", "rich>=13", "typer[all]>=0.12"]

[project.urls]
Homepage = "https://github.com/xoxpto/pipeline-360"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pipeline_360*"]

[project.scripts]
pipeline-360 = "pipeline_360.cli:main"
